Add JDK 9+ module example.